--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button onclick="loadBlocks(8, 8)">8 x 8</button>
     <button onclick="loadBlocks(16, 16)">16 x 16</button>
     <div id="sandbox">
+        <div id="cover" style="visibility: hidden;"></div>
     </div>
 </div>
 
