新增：失败判断、失败提示（嘲讽）

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <button onclick="loadBlocks(8, 8)">8 x 8</button>
     <button onclick="loadBlocks(16, 16)">16 x 16</button>
     <div id="sandbox">
-        <div id="cover" style="visibility: hidden;"></div>
+        <div id="cover" style="visibility: hidden;">
+            <b id="epitaph"></b>
+        </div>
     </div>
 </div>
 
