新增：双击方块时打开周围盒子

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id="retryBtn" onclick="retryGame()" style="visibility: hidden">重新开始</button>
     </div>
     <div id="progressInfo">
-        <b>Mine:</b><span id="found"></span>/<span id="mineNum"></span>
+        <b>Mine:</b><span id="found"></span><span>/</span><span id="mineNum"></span>
         <div style="display: inline-block; width: 20px;"></div>
         <b>Time:</b><span id="gameTime"></span>
     </div>
