--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="continueBtn" onclick="continueGame()">继续</button>
         <button id="changeModBtn" onclick="changeMod()">变更难度</button>
         <button id="stopBtn" onclick="stopGame()">结束</button>
-        <button id="retryBtn" onclick="retryGame()" style="visibility: hidden">重新开始</button>
+        <button id="retryBtn" onclick="retryGame()">重新开始</button>
     </div>
     <div id="progressInfo">
         <b>Mine:</b><span id="found"></span><span>/</span><span id="mineNum"></span>
